crates/apollo-compiler/test_data/diagnostics/0010_operation_with_unused_variable.txt
Error: unused variable: `$unusedVariable`
   ╭─[0010_operation_with_unused_variable.graphql:1:20]
   │
 1 │ query ExampleQuery($unusedVariable: Int) {
   │                    ───────┬───────  
   │                           ╰───────── variable is never used
───╯

